examples/bad/14_2_multipletype_list_init.soy
c = [1, "hej"]; # error
# d = [int, str]; # error

# d = [[int], [str]]; # correct!